Sequence Generator for Account Number Implemented