@@ -51,7 +51,7 @@ public class UserServiceImpl implements UserService {
     public Response createUser(CreateUser userDto) {
 
         List<UserRepresentation> userRepresentations = keycloakService.readUserByEmail(userDto.getEmailId());
-        if(userRepresentations.size() > 0) {
+        if(!userRepresentations.isEmpty()) {
             log.error("This emailId is already registered as a user");
             throw new ResourceConflictException("This emailId is already registered as a user");
         }
@@ -82,7 +82,7 @@ public class UserServiceImpl implements UserService {
                     .emailId(userDto.getEmailId())
                     .contactNo(userDto.getContactNumber())
                     .status(Status.PENDING).userProfile(userProfile)
-                    .authId(representations.get(0).getId())
+                    .authId(representations.getFirst().getId())
                     .identificationNumber(UUID.randomUUID().toString()).build();
 
             userRepository.save(user);
@@ -93,11 +93,6 @@ public class UserServiceImpl implements UserService {
         throw new RuntimeException("User with identification number not found");
     }
 
-    /**
-     * Retrieves all users and their corresponding details.
-     *
-     * @return a list of UserDto objects containing the user information
-     */
     @Override
     public List<UserDto> readAllUsers() {
 
@@ -116,13 +111,6 @@ public class UserServiceImpl implements UserService {
         }).collect(Collectors.toList());
     }
 
-    /**
-     * Reads a user from the database using the provided authId.
-     *
-     * @param authId the authentication id of the user
-     * @return the UserDto object representing the user
-     * @throws ResourceNotFound if the user is not found on the server
-     */
     @Override
     public UserDto readUser(String authId) {
 
@@ -135,15 +123,6 @@ public class UserServiceImpl implements UserService {
         return userDto;
     }
 
-    /**
-     * Updates the status of a user.
-     *
-     * @param id The ID of the user.
-     * @param userUpdate The updated user status.
-     * @return The response indicating the success of the update.
-     * @throws ResourceNotFound If the user is not found.
-     * @throws EmptyFields If the user has empty fields.
-     */
     @Override
     public Response updateUserStatus(Long id, UserUpdateStatus userUpdate) {
 
@@ -170,13 +149,6 @@ public class UserServiceImpl implements UserService {
                 .responseCode(responseCodeSuccess).build();
     }
 
-    /**
-     * Retrieves a user by their ID.
-     *
-     * @param userId the ID of the user to retrieve
-     * @return the UserDto object representing the user
-     * @throws ResourceNotFound if the user is not found
-     */
     @Override
     public UserDto readUserById(Long userId) {
 
@@ -185,14 +157,6 @@ public class UserServiceImpl implements UserService {
                 .orElseThrow(() -> new ResourceNotFound("User not found on the server"));
     }
 
-    /**
-     * Updates a user with the given ID.
-     *
-     * @param id The ID of the user to update.
-     * @param userUpdate The updated information for the user.
-     * @return The response indicating the success or failure of the update operation.
-     * @throws ResourceNotFound if the user with the given ID is not found.
-     */
     @Override
     public Response updateUser(Long id, UserUpdate userUpdate) {
 
@@ -208,23 +172,4 @@ public class UserServiceImpl implements UserService {
                 .responseMessage("user updated successfully").build();
     }
 
-    /**
-     * Retrieves a UserDto by the given accountId.
-     *
-     * @param accountId The account ID of the user.
-     * @return The UserDto object corresponding to the given accountId.
-     * @throws ResourceNotFound If the account or user is not found on the server.
-     */
-//    @Override
-//    public UserDto readUserByAccountId(String accountId) {
-//
-//        ResponseEntity<Account> response = accountService.readByAccountNumber(accountId);
-//        if(Objects.isNull(response.getBody())){
-//            throw new ResourceNotFound("account not found on the server");
-//        }
-//        Long userId = response.getBody().getUserId();
-//        return userRepository.findById(userId)
-//                .map(user -> userMapper.convertToDto(user))
-//                .orElseThrow(() -> new ResourceNotFound("User not found on the server"));
-//    }
 }
